

lib_LTLIBRARIES = libtpproto.la


libtpproto_la_LDFLAGS = -version-info 0:0:0
libtpproto_la_SOURCES = framecodec.cpp tpsocket.cpp frame.cpp buffer.cpp \
    connect.cpp okframe.cpp failframe.cpp login.cpp tcpsocket.cpp sequence.cpp\
    getobjectbyid.cpp vector3d.cpp getobjectbypos.cpp object.cpp \
    universe.cpp galaxy.cpp starsystem.cpp planet.cpp fleet.cpp \
    board.cpp getboard.cpp getmessage.cpp message.cpp gettime.cpp timeremaining.cpp \
    removemessage.cpp order.cpp getorder.cpp removeorder.cpp \
    orderdesc.cpp getorderdesc.cpp orderparameter.cpp spacecoord.cpp timeparameter.cpp
libtpprotodir = $(includedir)/tpproto
libtpproto_HEADERS = framecodec.h frame.h tpsocket.h frame.h buffer.h \
    connect.h okframe.h failframe.h login.h tcpsocket.h sequence.h \
    getobjects.h getobjectbyid.h vector3d.h getobjectbypos.h object.h \
    objectvisitor.h universe.h galaxy.h starsystem.h planet.h fleet.h \
    board.h getboard.h getmessage.h message.h gettime.h timeremaining.h \
    removemessage.h asyncframelistener.h order.h getorder.h removeorder.h \
    orderdesc.h getorderdesc.h orderparameter.h spacecoord.h timeparameter.h




